PropertyConfig is a record